# BigTalkDesignPatternCppTest

./: CMakeLists.txt
Chapter-01/: CMakeLists.txt  main.cpp
Chapter-01/internal/: Operation.h  OperationDiv.h  OperationSub.cpp  OperationSub.h
Chapter-02/: CMakeLists.txt  main.cpp
Chapter-02/internal/: ConcreteStrategyA.h  ConcreteStrategyB.cpp  ConcreteStrategyB.h  ConcreteStrategyC.h  Context.cpp  Strategy.cpp
Chapter-06/: CMakeLists.txt  main.cpp
Chapter-06/internal/: BigTrouser.h  ConcreteComponent.cpp  ConcreteComponent.h  ConcreteDecoratorA.cpp  ConcreteDecoratorA.h  ConcreteDecoratorB.cpp  ConcreteDecoratorB.h  Decorator.cpp  Decorator.h  Finery.h  LeatherShoes.cpp  Sneakers.cpp  Suit.h  TShirts.cpp  TShirts.h  Tie.cpp
Chapter-06/internal/Interface/: Component.h
Chapter-07/: CMakeLists.txt  main.cpp
Chapter-07/internal/: IGiveGift.cpp  IGiveGift.h  Proxy.cpp  Proxy.h  Pursuit.cpp
Chapter-1/: CMakeLists.txt
Chapter-1/internal/: Operation.cpp  OperationAdd.cpp  OperationAdd.h  OperationDiv.cpp  OperationFactory.cpp  OperationFactory.h  OperationMul.cpp  OperationMul.h
Chapter-10/: CMakeLists.txt  main.cpp
Chapter-10/internal/: AbstractClass.cpp  AbstractClass.h  ConcreteClassA.cpp  ConcreteClassA.h  ConcreteClassB.cpp  ConcreteClassB.h
Chapter-12/: CMakeLists.txt  main.cpp
Chapter-12/internal/: Facade.cpp  Facade.h  SubSystemFour.cpp  SubSystemFour.h  SubSystemOne.cpp  SubSystemOne.h  SubSystemThree.cpp  SubSystemThree.h  SubSystemTwo.cpp  SubSystemTwo.h
Chapter-13/: CMakeLists.txt  main.cpp
Chapter-13/internal/: Builder.cpp  Builder.h  ConcreteBuilder1.cpp  ConcreteBuilder1.h  ConcreteBuilder2.cpp  ConcreteBuilder2.h  Director.cpp  Director.h  Product.cpp  Product.h
Chapter-14/: CMakeLists.txt  main.cpp
Chapter-14/internal/: ConcreteObserver.cpp  ConcreteObserver.h  ConcreteSubject.cpp  ConcreteSubject.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h
Chapter-15/: CMakeLists.txt  main.cpp
Chapter-15/internal/: AccessDepartment.cpp  AccessDepartment.h  AccessFactory.cpp  AccessFactory.h  AccessUser.cpp  AccessUser.h  Department.cpp  Department.h  IDepartment.cpp  IDepartment.h  IFactory.cpp  IFactory.h  IUser.cpp  IUser.h  SqlServerFactory.cpp  SqlServerFactory.h  SqlserverDepartment.cpp  SqlserverDepartment.h  SqlserverUser.cpp  SqlserverUser.h  User.cpp  User.h
Chapter-16/: CMakeLists.txt  main.cpp
Chapter-16/internal/: AfternoonState.cpp  AfternoonState.h  EveningState.cpp  EveningState.h  ForenoonState.cpp  ForenoonState.h  NoonState.cpp  NoonState.h  RestState.cpp  RestState.h  SleepingState.cpp  SleepingState.h  State.cpp  State.h  Work.cpp  Work.h
Chapter-17/: CMakeLists.txt
Chapter-17/Adapter/: Adaptee.cpp  Adaptee.h  Adapter.cpp  Adapter.h  CMakeLists.txt  Target.cpp  Target.h  main.cpp
Chapter-17/TranslatorAdapter/: CMakeLists.txt  Center.cpp  Center.h  ForeignCenter.cpp  ForeignCenter.h  Forwards.cpp  Forwards.h  Guards.cpp  Guards.h  Player.cpp  Player.h  Translator.cpp  Translator.h  main.cpp
Chapter-18/: CMakeLists.txt  main.cpp
Chapter-18/internal/: Caretaker.cpp  Caretaker.h  Memento.cpp  Memento.h  Originator.cpp  Originator.h
Chapter-19/: CMakeLists.txt  main.cpp
Chapter-19/internal/: Component.cpp  Component.h  Composite.cpp  Composite.h  Leaf.cpp  Leaf.h
Chapter-2/: CMakeLists.txt
Chapter-2/internal/: ConcreteStrategyA.cpp  ConcreteStrategyC.cpp  Context.h  Strategy.h
Chapter-20/: CMakeLists.txt  main.cpp
Chapter-20/internal/: ConcreteAggregate.cpp  ConcreteAggregate.h  ConcreteIterator.cpp  ConcreteIterator.h
Chapter-20/internal/Interface/: Aggregate.h  Iterator.h
Chapter-21/: CMakeLists.txt  main.cpp
Chapter-21/internal/: Singleton.cpp  Singleton.h
Chapter-22/: CMakeLists.txt  main.cpp
Chapter-22/internal/: HandsetAddressList.cpp  HandsetAddressList.h  HandsetBrandM.cpp  HandsetBrandM.h  HandsetBrandN.cpp  HandsetBrandN.h  HandsetGame.cpp  HandsetGame.h
Chapter-22/internal/Interface/: HandsetBrand.cpp  HandsetBrand.h  HandsetSoft.h
Chapter-23/: CMakeLists.txt  main.cpp
Chapter-23/internal/: ConcreteCommand.cpp  ConcreteCommand.h  Invoker.cpp  Invoker.h  Receiver.cpp  Receiver.h
Chapter-23/internal/Interface/: Command.cpp  Command.h
Chapter-24/: CMakeLists.txt  main.cpp
Chapter-24/internal/: ConcreteHandler1.cpp  ConcreteHandler1.h  ConcreteHandler2.cpp  ConcreteHandler2.h  ConcreteHandler3.cpp  ConcreteHandler3.h
Chapter-24/internal/Interface/: Handler.cpp  Handler.h
Chapter-25/: CMakeLists.txt  main.cpp
Chapter-25/internal/: ConcreteColleague1.cpp  ConcreteColleague1.h  ConcreteColleague2.cpp  ConcreteColleague2.h  ConcreteMediator.cpp  ConcreteMediator.h
Chapter-25/internal/Interface/: Colleague.cpp  Colleague.h  Mediator.h
Chapter-26/: CMakeLists.txt  main.cpp
Chapter-26/internal/: ConcreteFlyweight.cpp  ConcreteFlyweight.h  FlyweightFactory.cpp  FlyweightFactory.h  UnsharedConcreteFlyweight.cpp  UnsharedConcreteFlyweight.h
Chapter-26/internal/Interface/: Flyweight.h
Chapter-6/: CMakeLists.txt
Chapter-6/internal/: BigTrouser.cpp  Finery.cpp  LeatherShoes.h  Person.cpp  Person.h  Sneakers.h  Suit.cpp  Tie.h
Chapter-7/: CMakeLists.txt
Chapter-7/internal/: Pursuit.h  SchoolGirl.cpp  SchoolGirl.h
Chapter17/: CMakeLists.txt
Chapter17/Adapter/: Adaptee.cpp  Adaptee.h  Adapter.cpp  Adapter.h  CMakeLists.txt  Target.cpp  Target.h  main.cpp
Chapter17/TranslatorAdapter/: CMakeLists.txt  Center.cpp  Center.h  ForeignCenter.cpp  ForeignCenter.h  Forwards.cpp  Forwards.h  Guards.cpp  Guards.h  Player.cpp  Player.h  Translator.cpp  Translator.h  main.cpp
