CMAKE_MINIMUM_REQUIRED(VERSION 3.3)  

PROJECT(BigTalkDesignPatternCppTest)  
  
#Add subdirectory
ADD_SUBDIRECTORY(Chapter-1)  
ADD_SUBDIRECTORY(Chapter-2)  
ADD_SUBDIRECTORY(Chapter-6)  
ADD_SUBDIRECTORY(Chapter-7)  

ADD_SUBDIRECTORY(Chapter-17)  


  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
