CMAKE_MINIMUM_REQUIRED(VERSION 3.3)  

PROJECT(BigTalkDesignPatternCppTest)  
  
#Add subdirectory
ADD_SUBDIRECTORY(Chapter-01) 
ADD_SUBDIRECTORY(Chapter-02) 


 
ADD_SUBDIRECTORY(Chapter-06) 
ADD_SUBDIRECTORY(Chapter-07) 


ADD_SUBDIRECTORY(Chapter-10) 

ADD_SUBDIRECTORY(Chapter-12) 
ADD_SUBDIRECTORY(Chapter-13) 
ADD_SUBDIRECTORY(Chapter-14) 
ADD_SUBDIRECTORY(Chapter-15) 
ADD_SUBDIRECTORY(Chapter-16) 

ADD_SUBDIRECTORY(Chapter-17) 
ADD_SUBDIRECTORY(Chapter-18) 
ADD_SUBDIRECTORY(Chapter-19) 
ADD_SUBDIRECTORY(Chapter-20) 
ADD_SUBDIRECTORY(Chapter-21) 
ADD_SUBDIRECTORY(Chapter-22) 
ADD_SUBDIRECTORY(Chapter-23) 


  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
